--- a/Server/Server.vbproj
+++ b/Server/Server.vbproj
@@ -48,10 +48,15 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Guna.UI">
+      <HintPath>..\..\..\..\Desktop\Guna.UI-Framework-Lib-master\Guna.UI-Framework-Lib\.net 4.0\Guna.UI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -80,10 +85,16 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.vb">
-      <DependentUpon>Form2.vb</DependentUpon>
+    <Compile Include="loadingScreen.Designer.vb">
+      <DependentUpon>loadingScreen.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form2.vb">
+    <Compile Include="loadingScreen.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="mainMenu.Designer.vb">
+      <DependentUpon>mainMenu.vb</DependentUpon>
+    </Compile>
+    <Compile Include="mainMenu.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -106,14 +117,17 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.vb</DependentUpon>
+    <EmbeddedResource Include="loadingScreen.resx">
+      <DependentUpon>loadingScreen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="mainMenu.resx">
+      <DependentUpon>mainMenu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +171,75 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\p2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loading2.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\title.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\snake.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mouseClick.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadingScreen1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadingScreen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadingScreen2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadingScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loading.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadDice.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadingScreen3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mainmenuPic.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aboutIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exitIcon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Image2.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\multiplayerIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kitPic.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\reyhanPic.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sodsPic.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tagsPic.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\leaderboardIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\intructionIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\backIcon.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
